code review and post merge of develop
Signed-off-by: Edward Wertz <edward@swirldslabs.com>